--- a/Web4/Web.ConnectionStrings.config
+++ b/Web4/Web.ConnectionStrings.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <connectionStrings>
   <add name="AzureContainer" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=AzureLmcom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient"/>
-  <add name="Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient"/>
+  <add name="Container" connectionString="Data Source=PZ-W8\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=True;" providerName="System.Data.SqlClient"/>
   <add name="ScormExNet35Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient"/>
   <add name="TradosData" connectionString="Data Source=195.250.145.26;Initial Catalog=LMTrados;Persist Security Info=True;User ID=lmcomdatatest;Password=lmcomdatatest" providerName="System.Data.SqlClient"/>
 </connectionStrings>  
