--- a/Web4/Web.config
+++ b/Web4/Web.config
@@ -114,6 +114,13 @@
       <add type="Handlers.GZipHandler" name="GZipHandler8" path="*.otf" verb="GET" />
       <add type="Handlers.GZipHandler" name="GZipHandler9" path="*.woff" verb="GET" />
       <add type="Handlers.GZipHandler" name="GZipHandler10" path="*.eot" verb="GET" />
+      <!-- data mohou byt jinde nez v web aplikaci => musi jit pres handler -->
+      <add type="Handlers.GZipHandler" name="GZipHandler11" path="*.png" verb="GET" />
+      <add type="Handlers.GZipHandler" name="GZipHandler12" path="*.bmp" verb="GET" />
+      <add type="Handlers.GZipHandler" name="GZipHandler13" path="*.gif" verb="GET" />
+      <add type="Handlers.GZipHandler" name="GZipHandler14" path="*.mp4" verb="GET" />
+      <add type="Handlers.GZipHandler" name="GZipHandler15" path="*.webm" verb="GET" />
+
       <!--<add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
       <add type="DevExpress.Web.ASPxClasses.ASPxHttpHandlerModule, DevExpress.Web.v14.1, Version=14.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET" path="DX.ashx" name="ASPxHttpHandlerModule" preCondition="integratedMode" />-->
     <remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /></handlers>
