--- a/Web4/Web.AppSetting.config
+++ b/Web4/Web.AppSetting.config
@@ -7,9 +7,9 @@
   
   <!--PDF certifikat pro eTestMe-->
   <add key="PDF.Cert.Password" value="xcv456dfg258_" />
-  <add key="PDF.Cert"         value="{0}rew\Web4\App_Data\testMe\langmaster_pdf.pfx" />
-  <add key="PDF.Font"         value="{0}rew\Web4\App_Data\testMe\verdana.ttf" />
-  <add key="PDF.FontBold"     value="{0}rew\Web4\App_Data\testMe\verdanab.ttf" />
+  <add key="PDF.Cert"         value="{0}App_Data\testMe\langmaster_pdf.pfx" />
+  <add key="PDF.Font"         value="{0}App_Data\testMe\verdana.ttf" />
+  <add key="PDF.FontBold"     value="{0}App_Data\testMe\verdanab.ttf" />
   <!--<add key="PDF.TemplateMask" value="{0}rew\Web4\App_Data\testMe\Pdf\{1}.pdf" />-->
 
   <add key="SSAS.ConnectionString" value="data source=PZ-W8VIRTUAL\SQLSERVER;user id=LANGMASTER\pavel;password=zvahov88_;" />
