--- a/Web4/Web4.csproj
+++ b/Web4/Web4.csproj
@@ -249,8 +249,12 @@
     <Content Include="AuthorWeb\trash\jquery-ui\jquery-ui.js" />
     <Content Include="AuthorWeb\trash\jquery-ui\jquery-ui.structure.css" />
     <Content Include="AuthorWeb\trash\jquery-ui\jquery-ui.theme.css" />
+    <Content Include="BlendedAPI\views\view2.html" />
+    <Content Include="BlendedAPI\views\vyzvaproduct.html" />
     <Content Include="JsLib\css\flag-mid.css" />
     <Content Include="JsLib\css\flag-small.css" />
+    <Content Include="JsLib\Scripts\angular-ie8.js" />
+    <Content Include="JsLib\Scripts\angular.js" />
     <Content Include="links.aspx" />
     <Content Include="packs\repositories.config" />
     <Content Include="Licenses\v8.valgrind.license" />
@@ -1330,6 +1334,7 @@
     <TypeScriptCompile Include="Author\doc.ts" />
     <TypeScriptCompile Include="Author\GenerateReflection.ts" />
     <TypeScriptCompile Include="Author\vsNet.ts" />
+    <TypeScriptCompile Include="BlendedAPI\app.ts" />
     <TypeScriptCompile Include="BS3\js\bootstrap.d.ts" />
     <TypeScriptCompile Include="Courses\codes\chinhSpeaking.ts" />
     <TypeScriptCompile Include="Courses\codes\docReference.ts" />
@@ -1368,7 +1373,6 @@
     <Content Include="Schools\Splash.html" />
     <Content Include="Schools\Statistics.html" />
     <Content Include="Schools\Design\ExtractWords.aspx" />
-    <Content Include="Schools\GenProxy.aspx" />
     <None Include="Statistics\Default.ascx_" />
     <None Include="Statistics\Toc.ascx_" />
     <Content Include="Temp\file1.js" />
@@ -1405,6 +1409,14 @@
     <Content Include="Temp\mediumJS\rangy-core.js" />
     <TypeScriptCompile Include="Courses\Ordering.ts" />
     <None Include="JsLib\JSD\HtmlAudio\waa.d - Copy.ts_" />
+    <TypeScriptCompile Include="JsLib\JSD\angularjs\angular-animate.d.ts" />
+    <TypeScriptCompile Include="JsLib\JSD\angularjs\angular-cookies.d.ts" />
+    <TypeScriptCompile Include="JsLib\JSD\angularjs\angular-mocks.d.ts" />
+    <TypeScriptCompile Include="JsLib\JSD\angularjs\angular-resource.d.ts" />
+    <TypeScriptCompile Include="JsLib\JSD\angularjs\angular-route.d.ts" />
+    <TypeScriptCompile Include="JsLib\JSD\angularjs\angular-sanitize.d.ts" />
+    <TypeScriptCompile Include="JsLib\JSD\angularjs\angular-ui-router.d.ts" />
+    <TypeScriptCompile Include="JsLib\JSD\angularjs\angular.d.ts" />
     <TypeScriptCompile Include="JsLib\JSD\HtmlAudio\waa.d.ts" />
     <TypeScriptCompile Include="JsLib\JSD\jquery-ui.d.ts" />
     <TypeScriptCompile Include="JsLib\JSD\lib-lm.d.ts" />
@@ -2660,6 +2672,8 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="BlendedAPI\Controllers\" />
+    <Folder Include="BlendedAPI\Styles\img\" />
     <Folder Include="BS3\css\" />
     <Folder Include="ClientBin\" />
     <Folder Include="JsLib\css\img\Reports\" />
