--- a/NewLMComModel/App.config
+++ b/NewLMComModel/App.config
@@ -8,6 +8,8 @@
   <connectionStrings>
     <clear />
     <add name="Container" connectionString="Data Source=127.0.0.1;initial catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest" providerName="System.Data.SqlClient" />
+    <add name="Vyzva57" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=NewData.Design.Vyzva57;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Vyzva57Container" connectionString="metadata=res://*/Design.Vyzva57.csdl|res://*/Design.Vyzva57.ssdl|res://*/Design.Vyzva57.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=d:\LMCom\rew\Web4\App_Data\vyzva57.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="LMComData" value="d:\LMCom\rew\Web4\Schools\Design\" />
