--- a/Web4/Web.ConnectionStrings.config
+++ b/Web4/Web.ConnectionStrings.config
@@ -1,12 +1,14 @@
 <?xml version="1.0"?>
 <connectionStrings>
-  <add name="AzureContainer" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=AzureLmcom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient"/>
-  <add name="ScormExNet35Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient"/>
-  <add name="TradosData" connectionString="Data Source=195.250.145.26;Initial Catalog=LMTrados;Persist Security Info=True;User ID=lmcomdatatest;Password=lmcomdatatest" providerName="System.Data.SqlClient"/>
-  <add name="Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient"/>
-</connectionStrings>  
+  <add name="AzureContainer" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=AzureLmcom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
+  <add name="ScormExNet35Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
+  <add name="TradosData" connectionString="Data Source=195.250.145.26;Initial Catalog=LMTrados;Persist Security Info=True;User ID=lmcomdatatest;Password=lmcomdatatest" providerName="System.Data.SqlClient" />
+  <add name="Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
+  <add name="Vyzva57" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\vyzva57.mdf;Integrated Security=True;MultipleActiveResultSets=True;Connect Timeout=30;Application Name=EntityFramework;User Instance=True" providerName="System.Data.SqlClient" />
+</connectionStrings>
 <!-- 
 <connectionStrings> 
+    <add name="Vyzva57" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=NewData.Design.Vyzva57;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   CE
   <add name="Container" connectionString="Data Source=|DataDirectory|\NewData.sdf" providerName="System.Data.SqlServerCe.4.0"/>
   LOCAL
