--- a/.gitignore
+++ b/.gitignore
@@ -220,7 +220,11 @@ web4/data/productscurrent.xml
 web4/data/productsexpanded.xml
 web4/data/actproductsexpanded.xml
 web4/data/productsitemap.xml
+lmcom/
 
 web4/siteroot.js
 web4/siteroot.all.js
 
+Web4/Schools/SLExtension.dll
+*.xap
+Web4/Schools/SLExtension.xap
