--- a/Web4/Web4.csproj
+++ b/Web4/Web4.csproj
@@ -114,6 +114,7 @@
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data.Linq">
       <Private>True</Private>
@@ -140,6 +141,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security">
       <Private>True</Private>
     </Reference>
@@ -251,6 +253,16 @@
     <Content Include="AuthorWeb\trash\jquery-ui\jquery-ui.theme.css" />
     <Content Include="BlendedAPI\views\view2.html" />
     <Content Include="BlendedAPI\views\vyzvaproduct.html" />
+    <Content Include="BlendedAPI\vyzva\Server\DataModel\schema\Model.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Model.Context.cs</LastGenOutput>
+      <DependentUpon>Model.edmx</DependentUpon>
+    </Content>
+    <Content Include="BlendedAPI\vyzva\Server\DataModel\schema\Model.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Model.cs</LastGenOutput>
+      <DependentUpon>Model.edmx</DependentUpon>
+    </Content>
     <Content Include="BlendedAPI\vyzva\Views\productHome.html" />
     <Content Include="JsLib\css\flag-mid.css" />
     <Content Include="JsLib\css\flag-small.css" />
@@ -263,6 +275,13 @@
     <Content Include="Licenses\v8.strongtalk.license" />
     <Content Include="Licenses\v8.main.license" />
     <Content Include="Licenses\ClearScript.main.license" />
+    <EntityDeploy Include="BlendedAPI\vyzva\Server\DataModel\schema\Model.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Model.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="BlendedAPI\vyzva\Server\DataModel\schema\Model.edmx.diagram">
+      <DependentUpon>Model.edmx</DependentUpon>
+    </Content>
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -1337,9 +1356,11 @@
     <TypeScriptCompile Include="Author\vsNet.ts" />
     <TypeScriptCompile Include="BlendedAPI\appBoot.ts" />
     <TypeScriptCompile Include="BlendedAPI\app.ts" />
+    <TypeScriptCompile Include="BlendedAPI\Scripts\CourseMetaLib.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\app.ts" />
     <TypeScriptCompile Include="BlendedAPI\Scripts\Loader.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\Controllers\productHome.ts" />
+    <TypeScriptCompile Include="BlendedAPI\vyzva\tasks.ts" />
     <TypeScriptCompile Include="BS3\js\bootstrap.d.ts" />
     <TypeScriptCompile Include="Courses\codes\chinhSpeaking.ts" />
     <TypeScriptCompile Include="Courses\codes\docReference.ts" />
@@ -1364,6 +1385,9 @@
     <Content Include="Schools\Design\lmConsole.aspx" />
     <Content Include="Schools\Design\QueryBuilder.aspx" />
     <Content Include="Schools\Design\sitemap.xml" />
+    <EmbeddedResource Include="Migrations\201508172018132_v001.resx">
+      <DependentUpon>201508172018132_v001.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -2400,6 +2424,39 @@
     <Compile Include="Author\Author.aspx.designer.cs">
       <DependentUpon>Author.aspx</DependentUpon>
     </Compile>
+    <Compile Include="BlendedAPI\vyzva\Server\DataModel\schema\Company.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BlendedAPI\vyzva\Server\DataModel\schema\CourseData.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BlendedAPI\vyzva\Server\DataModel\schema\CourseUser.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BlendedAPI\vyzva\Server\DataModel\schema\Model.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BlendedAPI\vyzva\Server\DataModel\schema\Model.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BlendedAPI\vyzva\Server\DataModel\schema\StudyGrup.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BlendedAPI\vyzva\Server\DataModel\StudyGrups.cs" />
+    <Compile Include="BlendedAPI\vyzva\Server\Vyzva57Services.cs" />
+    <Compile Include="BlendedAPI\vyzva\Server\DataModel\Company.cs" />
+    <Compile Include="BlendedAPI\vyzva\Server\DataModel\CourseData.cs" />
+    <Compile Include="BlendedAPI\vyzva\Server\DataModel\CourseUser.cs" />
+    <Compile Include="BlendedAPI\vyzva\Server\DataModel\schema\Model.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="BlendedAPI\vyzva\Server\DataModel\Vyzva57.cs" />
     <Compile Include="Code\LibMp3Lame.cs" />
     <Compile Include="Code\NormalizeProjectFile.cs" />
     <Compile Include="Code\Skrivanek.cs" />
@@ -2414,6 +2471,11 @@
     <Compile Include="links.aspx.designer.cs">
       <DependentUpon>links.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201508172018132_v001.cs" />
+    <Compile Include="Migrations\201508172018132_v001.Designer.cs">
+      <DependentUpon>201508172018132_v001.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="mp3Uploader.ashx.cs">
       <DependentUpon>mp3Uploader.ashx</DependentUpon>
     </Compile>
