--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,5 @@ web4/siteroot.all.js
 Web4/Schools/SLExtension.dll
 *.xap
 Web4/Schools/SLExtension.xap
+Web4/Schools/SLExtension.dll
+Web4/Schools/SLExtension.xap
